# Bountiful

./: .gitignore  .gitmodules  CMakeLists.txt
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/GUI/: KitikLevelMeter.h  KitikLookAndFeel.cpp  KitikLookAndFeel.h  RotarySliderWithLabels.cpp  RotarySliderWithLabels.h  SliderWithLabels.cpp  SliderWithLabels.h
Source/Utility/: PresetManager.cpp  PresetManager.h  PresetPanel.cpp  PresetPanel.h
